Fix(#357) Make scrollbar always visible when text is longer than textarea.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -155,6 +155,35 @@
   }
 }
 
+ion-textarea {
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+  }
+
+  ::-webkit-scrollbar:vertical {
+    width: 11px;
+  }
+
+  ::-webkit-scrollbar:horizontal {
+    height: 11px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 2px solid white;
+    background-color: rgba(0, 0, 0, .5);
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #fff;
+    border-radius: 8px;
+  }
+
+  .overflow-scroll {
+    overflow-y: auto !important;
+  }
+}
+
 ion-navbar ion-icon{
   padding-left: 10px;
   font-size: 2em;
